--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,10 +22,16 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "@fortawesome/fontawesome-free": "^5.13.1",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "@types/chart.js": "^2.9.22",
+    "angular-bootstrap-md": "^9.3.1",
+    "animate.css": "^4.1.0",
     "bootstrap": "^5.0.0-alpha1",
     "c": "^1.0.0",
+    "chart.js": "^2.5.0",
     "hamburgers": "^1.1.3",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
